# Crypto

./: .gitignore  README.md  SYSTEM_SPEC.yaml  pyproject.toml
configs/: default.yaml
docs/papers/: nash_equilibrium_bitcoin.md
scripts/: backtest.py  build_dataset.py  run_dashboard.py  run_ingest.py  run_persona.py  serve_signal.py  train.py
src/cryptoquant/: __init__.py  config.py  logging_config.py  personas.py
src/cryptoquant/addons/: __init__.py
src/cryptoquant/addons/nash_equilibrium/: __init__.py  metrics.py  regimes.py  report.py
src/cryptoquant/backtest/: metrics.py  simulator.py
src/cryptoquant/data/: exchange_client.py  ingest.py  storage.py
src/cryptoquant/datasets/: builder.py  labels.py
src/cryptoquant/features/: __init__.py  feature_store.py
src/cryptoquant/market/: __init__.py  agent_simulation.py  liquidity.py  microstructure.py
src/cryptoquant/models/: baseline_gbdt.py  router.py
src/cryptoquant/monitoring/: snapshot.py
src/cryptoquant/risk/: __init__.py  gates.py
src/cryptoquant/serve/: __init__.py  signal_api.py
src/cryptoquant/utils/: hash.py  time.py
tests/: test_addon_toggle.py  test_data_pipeline.py  test_edge_cases.py  test_ne_integration.py  test_ne_metrics.py  test_personas.py  test_risk_gates.py  test_router_training.py
